# -adaptive-hashmap-studio

./: .bandit.yaml  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff_baseline.json  Dockerfile  LICENSE  Makefile  NOTICE  README.md  audit.md  commit.sh  docker-compose.yml  fixes.md  gemini_audit.md  geminioct4thaudit.md  hashmap_cli.py  issues.md  mutmut.ini  mypy.ini  pyproject.toml  pytest.full.ini  pytest.ini  slicing.patch  systemwideaudit.md  upgrade.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  mutmut.yml  nightly.yml  release.yml
audits/: audit.md  oct1_audit.md  oct3_audit.md
config/: config.experiment.toml  config.generated.toml
data/config/: example_migration.cfg
data/workloads/: demo_dashboard.csv  hot.csv  my_workload.csv  oct1_demo.csv  oct1_w_heavy_adv.csv  oct1_w_uniform_half.csv  oct1_w_uniform_rest.csv  stress.csv  w_skew_adv.csv  w_uniform.csv  w_uniform_half.csv
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  entrypoint.sh
docs/: AI_GUIDANCE.md  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  batch_runner.md  command_audit.md  config.md  control_surface.md  data_inventory.md  error_envelope.md  grafana_dashboard.json  metrics_schema.md  prometheus_grafana.md  serve_mode.md  snapshot_format.md  upgrade.md  workload_schema.md
docs/analysis/: probe_visualizer.md
docs/containers/: README.md
docs/examples/: batch_baseline.toml  batch_compaction.toml
docs/ops/: ci_cd_pipeline.md  mutation_worktrees.md  runbook.md
docs/reports/: batch_baseline.md
docs/testing/: flaky_policy.md  mutation.md  mutation_automation.md  mutation_progress.md
newsfragments/: _template.jinja
reports/: batch_baseline.html  batch_baseline.md  batch_compaction.html  batch_compaction.md  command_inventory.md  command_master_list.md  command_run_log.tsv  full_command_audit.md  full_command_results.json
results/ab/demo/: comparison.json  comparison.md  demo_baseline_vs_candidate.json  demo_baseline_vs_candidate.md
results/ab/demo/artifacts/: baseline_summary.json  candidate_summary.json
results/json/: batch_compaction.json  batch_uniform.json  config_uniform.json  config_wizard_run.json  demo_latency.json  demo_metrics_session.json  demo_perf.json  demo_run.json  long_skew.json  my_perf.json  oct1_demo_perf.json  oct1_perf_heavy_adv.json  oct1_perf_rest.json  oct1_perf_skew_adv.json  oct1_perf_uniform.json  perf_heavy_adv.json  perf_rest.json  perf_skew_adv.json  perf_uniform.json  perf_uniform_auth.json  phase1_uniform.json  phase2_uniform_snapshot.json  run_hot.json  run_hot_lowthresh.json  run_hot_tiny.json  run_stress.json  run_stress_big_tuned.json  tmp_mc.json  workload_config.json  workload_dna_heavy_adv.json  workload_dna_skew_adv.json
scripts/: build_release_artifacts.py  ci_summary.sh  commit.sh  coverage_badge.sh  launch_mission_control.py  launch_tui.py  pipeline.sh  query_metric_endpoint.py  validate_metrics_ndjson.py
src/adaptive_hashmap_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/adhash/: __init__.py  _safe_subprocess.py  config.py  config_models.py  config_toolkit.py  hashmap_cli.py
src/adhash/analysis/: __init__.py  probe.py
src/adhash/batch/: __main__.py  runner.py
src/adhash/cli/: __init__.py  app.py  commands.py
src/adhash/cli/commands/: __init__.py  base.py
src/adhash/contracts/: __init__.py  error.py  metrics_schema.json
src/adhash/core/: __init__.py  latency.py  maps.py
src/adhash/io/: __init__.py  safe_pickle.py  snapshot.py  snapshot_header.py
src/adhash/metrics/: __init__.py  constants.py  core.py  server.py
src/adhash/metrics/static/: __init__.py  dashboard.css  dashboard.html  dashboard.js
src/adhash/mission_control/: __init__.py  __main__.py  app.py  builders.py  controller.py  layout.py  metrics_client.py  process_manager.py  widgets.py
src/adhash/mission_control/widgets/: __init__.py  benchmark_suite.py  common.py  config_editor.py  connection.py  metrics.py  probe_visualizer.py  run_control.py  snapshot_inspector.py  workload_dna.py
src/adhash/service/: __init__.py  __main__.py  api.py  jobs.py  models.py  worker.py
src/adhash/tui/: __main__.py  app.py
src/adhash/workloads/: dna.py
src/hashmap_cli/: __init__.py  __main__.py  validate_metrics_ndjson.py
stubs/jsonschema/: __init__.pyi
tests/: __init__.py  conftest.py  test_ab_compare.py  test_batch_runner.py  test_chaining_properties.py  test_cli_commands_handlers.py  test_cli_commands_register.py  test_cli_contracts.py  test_cli_handlers_unit.py  test_cli_logging.py  test_cli_probe_command.py  test_cli_workload_dna.py  test_config.py  test_config_toolkit_internals.py  test_config_toolkit_schema.py  test_config_validation_additional.py  test_config_wizard.py  test_dashboard_assets.py  test_hashmap_cli_core.py  test_hashmap_cli_main.py  test_hashmap_cli_shim.py  test_hybrid_capacity.py  test_latency_buckets.py  test_latency_reservoir.py  test_maps_properties.py  test_metrics_apply.py  test_metrics_core.py  test_metrics_core_additional.py  test_metrics_endpoints.py  test_metrics_schema.py  test_metrics_server_http.py  test_metrics_server_unit.py  test_mission_control_charts.py  test_mission_control_stub.py  test_mission_control_widgets_qt.py  test_mutmut_digest.py  test_perf_smoke.py  test_probe_tracer.py  test_process_manager.py  test_robinhood_properties.py  (+24 more)
tests/util/: __init__.py  hypothesis_profiles.py
tools/: check_subprocess_safety.py  mutants_orchestrator.sh  mutants_report.sh  mutmut_digest.py  mutmut_pytest_runner.py  update_ruff_baseline.py
tools/coverage/: sitecustomize.py  usercustomize.py
