[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-hashmap-cli"
version = "0.1.0"
description = "Adaptive Hash Map CLI tooling"
authors = [{name = "Adaptive HashMap Maintainers"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "hypothesis>=6.112",
  "jsonschema>=4.23",
  "ruff>=0.6.9",
  "mypy>=1.11",
  "coverage[toml]>=7.6",
  "build>=1.2",
  "towncrier>=23.11",
  "twine>=5.0",
  "black>=24.8",
  "pre-commit>=3.6",
  "textual>=0.56",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

gui = [
  "PyQt6>=6.7",
  "pyqtgraph>=0.13",
]

ui = [
  "textual>=0.56",
]

service = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[tool.towncrier]
package = "adaptive_hashmap_cli"
filename = "docs/CHANGELOG.md"
directory = "newsfragments"
title_format = "## Version {version} ({project_date})"
issue_format = "#{issue}"
underlines = ""
template = "newsfragments/_template.jinja"
start_string = "<!-- towncrier release notes start -->\n"

[[tool.towncrier.section]]
path = ""
title = "Changes"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true

[project.scripts]
hashmap-cli = "hashmap_cli:console_main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
branch = true
source = ["adhash", "hashmap_cli"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adhash.tui.app"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pyqtgraph"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.responses"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adhash.service.api"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adhash.service.__main__"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"adhash" = ["py.typed", "metrics/static/*.html", "metrics/static/*.css", "metrics/static/*.js"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
norecursedirs = [".*", "build", "dist", "mutants", "results", "runs", "tmp"]
