[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-hashmap-cli"
version = "0.1.0"
description = "Adaptive Hash Map CLI tooling"
authors = [{name = "Adaptive HashMap Maintainers"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "hypothesis>=6.112",
  "jsonschema>=4.23",
  "ruff>=0.6.9",
  "mypy>=1.11",
  "coverage[toml]>=7.6",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "mutmut>=2.4",
  "semgrep>=1.76",
  "build>=1.2",
  "towncrier>=23.11",
  "twine>=5.0",
  "black>=24.8",
  "pre-commit>=3.6",
  "textual>=0.56",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

gui = [
  "PyQt6>=6.7",
  "pyqtgraph>=0.13",
]

ui = [
  "textual>=0.56",
]

service = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[tool.towncrier]
package = "adaptive_hashmap_cli"
filename = "docs/CHANGELOG.md"
directory = "newsfragments"
title_format = "## Version {version} ({project_date})"
issue_format = "#{issue}"
underlines = ""
template = "newsfragments/_template.jinja"
start_string = "<!-- towncrier release notes start -->\n"

[[tool.towncrier.section]]
path = ""
title = "Changes"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true

[project.scripts]
hashmap-cli = "hashmap_cli:console_main"
validate-metrics-ndjson = "hashmap_cli.validate_metrics_ndjson:console_main"

[tool.coverage.run]
branch = true
source = ["adhash", "hashmap_cli"]
parallel = true
omit = [
  "src/adhash/mission_control/*",
  "src/adhash/metrics/server.py",
  "src/adhash/tui/app.py",
  "src/adhash/batch/__main__.py",
  "src/adhash/tui/__main__.py",
  "src/hashmap_cli/__main__.py",
  "src/hashmap_cli/validate_metrics_ndjson.py",
  "src/adhash/analysis/*",
  "src/adhash/batch/runner.py",
  "src/adhash/cli/commands/base.py",
  "src/adhash/config_toolkit.py",
  "src/adhash/core/maps.py",
  "src/adhash/metrics/core.py",
  "src/adhash/service/*",
  "src/adhash/workloads/dna.py",
  "src/hashmap_cli/__init__.py",
]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.hypothesis]
deadline = 500
derandomize = true
print_blob = true
verbosity = "normal"

[tool.hypothesis.profiles.fast]
settings.deadline = 300
settings.derandomize = true
settings.max_examples = 50

[tool.hypothesis.profiles.ci]
settings.deadline = 500
settings.derandomize = true

[tool.hypothesis.profiles.dev]
settings.deadline = 1000
settings.derandomize = false
settings.max_examples = 200

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
fix = false
preview = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP",
  "N",
  "C4",
  "ARG",
  "BLE",
  "DTZ",
  "S",
  "RET",
  "SIM",
  "TID",
]
ignore = [
  "D100",
  "D104",
]

[tool.ruff.lint.isort]
known-first-party = ["adhash", "hashmap_cli"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S311", "S404"]
"scripts/**" = ["S404"]
"src/adhash/_safe_subprocess.py" = ["S404"]
"src/adhash/mission_control/**" = ["TID252"]

[tool.ruff.format]
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"adhash" = ["py.typed", "metrics/static/*.html", "metrics/static/*.css", "metrics/static/*.js", "contracts/*.json"]
